# yatta

./: .coverage  .flake8  .gitignore  .python-version  .yattarc  README.md  noxfile.py  pyproject.toml  requirements.txt  setup.py  tmp  yatta  yatta-complete.zsh  yatta.py
.github/workflows/: coverage.yml  formatting.yml  linting.yml  test.yml  tests.yml
scripts/: plot  scratch.csv  scratch.py
scripts/superseded/: curses_ex.py  yatta.sh
src/: __init__.py
src/yatta/: completion_helpers.py  config.py  console.py  daemon.py  db.py  plotting.py  utils.py
src/yatta/commands/: config.py  delete.py  edit.py  list.py  plot.py  report.py  start.py  timesheet.py  track.py
tests/: test_console.py  test_utils.py
yatta/: data_utils.py  db.py  db_old.py  plot_utils.py  task.py  yatta.py
yatta/cli/: config.py  edit.py  list.py  track.py
yatta/commands/: plot.py
