[tool.poetry]
name = "yatta"
version = "0.2.3"
description = "Yet Another Time Tracking Application"
homepage = "https://github.com/rhroberts/yatta"
authors = ["Rusty Roberts <rust.roberts@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.scripts]
yatta = 'yatta.console:main'

[tool.poetry.dependencies]
python = "^3.6.1"
click = "^7.1.2"
pyfiglet = "^0.8.post1"
appdirs = "^1.4.4"
pandas = "^1.0.3"
tabulate = "^0.8.7"
sqlalchemy = "^1.3.17"
parsedatetime = "^2.5"
importlib-metadata = "^1.6.0"
colorama = "^0.4.3"
tomlkit = "^0.6.0"

[tool.poetry.dev-dependencies]
nox = "^2019.11.9"
flake8 = "^3.8.2"
black = "^19.10b0"
pytest = "^5.4.2"
codecov = "^2.1.3"
pytest-cov = "^2.9.0"
ipython = "^7.15.0"
rope = "^0.17.0"
isort = "^4.3.21"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["yatta"]

[tool.coverage.report]
show_missing = true
# fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

# testing
